--- a/themes/hbhtherapyintranet/style.css
+++ b/themes/hbhtherapyintranet/style.css
@@ -50,6 +50,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Alignments
 # Pages
     - Home
+    - News
 
 --------------------------------------------------------------*/
 
@@ -813,10 +814,10 @@ textarea {
 
 .btn {
     background: #fff;
-    border: 1px solid #76559A;
-    box-shadow: -1px 2px 5px -2px #76559A;
-    -webkit-box-shadow: -1px 2px 5px -2px #76559A;
-    -moz-box-shadow: -1px 2px 5px -2px #76559A;
+    border: 1px solid #008587;
+    box-shadow: -1px 2px 5px -2px #008587;
+    -webkit-box-shadow: -1px 2px 5px -2px #008587;
+    -moz-box-shadow: -1px 2px 5px -2px #008587;
     padding: 15px;
     width: 300px;
     border-radius: 8px;
@@ -825,7 +826,7 @@ textarea {
 
 button.btn {
     font-family: acumin-pro, sans-serif;
-    color: #F7931E;
+    color: #085962;
     text-decoration: none;
     font-weight: 600;
     font-style: normal;
@@ -838,7 +839,7 @@ a.btn {
     align-items: flex-start;
     box-sizing: border-box;
     font-family: acumin-pro, sans-serif;
-    color: #F7931E;
+    color: #085962;
     text-decoration: none;
     font-weight: 600;
     font-style: normal;
@@ -847,7 +848,7 @@ a.btn {
 }
 
 .btn:hover {
-    background: #76559A;
+    background: #7BBEB6;
     cursor: pointer;
 }
 
@@ -884,6 +885,10 @@ a.btn {
 .default-content {
     padding: 75px;
     background: #fff;
+}
+
+.department-content {
+    padding: 75px;
 }
 
 .hero-wrap {
@@ -1826,274 +1831,84 @@ Home Page
     }
 }
 
-/*---- Clinicians Section ------------*/
+/*--------------------
+News
+----------------------------- */
 
-.homeclin-section {
-    background: #fff;
+span .read-more:hover {
+    color: #f7921e;
 }
 
-.hmclin-content {}
-
-.hmclin-content h2 {
+.news-title {
     color: #085962;
-    margin-bottom: 15px;
+    font-size: 26px;
+    font-weight: 800;
+    margin: 10px 0;
 }
 
-a.hmclin-view-all {
-    font-family: acumin-pro, sans-serif;
-    color: #4D4D4D;
-    font-weight: 300;
-    font-style: normal;
-    text-decoration: none;
-    font-size: 20pt;
-    margin-top: 15px;
-}
-
-a.hmclin-view-all:hover {
+.news-title:hover {
     color: #F7931E;
 }
 
-.hmclin-card-wrap {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-    margin: 50px 0px;
+.news-date {
+    color: #979797;
+    font-size: 16px;
 }
 
-.clinician-card-image {
+/*--------------------
+HR
+----------------------------- */
+
+.list-item {
+    width: 100%;
+    margin: 10px;
+    cursor: pointer;
+    /*background: grey;*/
+}
+
+.accordion-title {
+    display: flex;
+    justify-content: space-between;
+}
+
+.handbook-subtitle {
+    color: #008587;
+    font-weight: 700;
+    margin: 0 10px;
+}
+
+.handbook-subtitle:hover {
+    color: #F7931E;
+}
+
+.is-accordion-open .handbook-subtitle {
+    color: #F7931E;
+}
+
+.close-caret {
+    display: none;
+}
+
+.is-accordion-open .close-caret {
     display: block;
-    width: 100%;
-    height: auto;
 }
 
-.clinician-card-container,
-.clinician-card-overlay {
-    position: relative;
-    z-index: 1;
-    background-color: #fff;
-    width: 100%;
-    height: 100%;
-    float: left;
-    overflow: hidden;
-    box-shadow: -2px 2px 4px -2px #4d4d4d;
-    -webkit-box-shadow: -2px 2px 4px -2px #4d4d4d;
-    -moz-box-shadow: -2px 2px 4px -2px #4d4d4d;
-}
-
-.clinician-card-overlay {
-    position: absolute;
-    top: 0;
-    left: -100%;
-    z-index: 2;
-    background-color: #008587;
-    margin: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-.clinician-card-container:hover .clinician-card-overlay {
-    top: 0;
-    left: 0;
-}
-
-.clinician-card-info {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    height: 100%;
-    padding: 10%;
-}
-
-a.clinician-card-name {
-    font-family: acumin-pro, sans-serif;
-    color: #fff;
-    text-decoration: none;
-    opacity: 1;
-    font-weight: 900;
-    font-style: normal;
-    font-size: 1.8em;
-    line-height: 1em;
-}
-
-a.clinician-card-name:hover {
-    opacity: .5;
-}
-
-a.clinician-card-link {
-    color: #fff;
-    font-weight: 300;
-    font-style: normal;
-    text-decoration: none;
-    opacity: 1;
-}
-
-a.clinician-card-link:hover {
-    opacity: .5;
-}
-
-.btn.red {
+.is-accordion-open .open-caret {
     display: none;
 }
 
-.clinician-card-overlay a {
-    width: 100%;
-    max-width: 300px;
-    border: 0;
-    box-shadow: 0;
-    -webkit-box-shadow: 0;
-    -moz-box-shadow: 0;
+.list-hr {
+    margin-bottom: 10px;
 }
 
-.clinician-card-overlay a:hover {
-    color: #fff;
+.is-accordion-open {
+    background: #fff;
+    z-index: 100;
 }
 
-@media only screen and (min-width: 1125px) {}
-
-@media only screen and (max-width: 1125px) {}
-
-@media only screen and (max-width: 700px) {
-    .hmclin-card-wrap {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 10px;
-        margin: 5%;
-    }
-
-    a.hmclin-view-all {
-        font-size: 15pt;
-        display: block;
-        padding-left: 10px;
-    }
-
-    .clinician-card-overlay button {
-        font-size: 16px;
-    }
-
-    a.clinician-card-name {
-        font-size: 2em;
-    }
-}
-
-/*---- Testimonial Section ------------*/
-.home-testimonial-section {
-    background: linear-gradient(0deg, rgba(250, 248, 244, 1) 84%, rgba(255, 255, 255, 1) 100%);
-}
-
-.hm-testimonial-content {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.testimonial-img-wrap {
-    width: 50%;
-}
-
-.testimonial-img-mobile {
+.accordion-content {
     display: none;
 }
-
-.testimonial-wrap {
-    width: 50%;
-    padding-right: 160px;
-}
-
-.hm-testimonial-content h2 {
-    color: #F7931E;
-}
-
-.testimonial-img {
-    width: 80%;
-}
-
-.testimonial-border-img {
-    width: 100%;
-}
-
-.testimonial-quote {
-    font-weight: 300;
-    font-style: italic;
-    font-size: 22px;
-    line-height: 42px;
-}
-
-.testimonial-attribute {
-    font-weight: 400;
-    font-style: normal;
-    text-transform: uppercase;
-}
-
-.owl-theme .owl-dots .owl-dot.active span,
-.owl-theme .owl-dots .owl-dot:hover span {
-    background: #76559A !important;
-}
-
-@media only screen and (min-width: 1125px) {}
-
-@media only screen and (max-width: 1296px) {
-    .testimonial-wrap {
-        padding-right: 60px;
-        width: 65%;
-    }
-
-    .testimonial-img-wrap {
-        width: 30%;
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .testimonial-img-wrap {
-        display: none;
-    }
-
-    .testimonial-wrap {
-        width: 100%;
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-
-    .quote-wrap {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .testimonial-img-mobile {
-        display: flex;
-        align-self: flex-start;
-        width: 10%;
-    }
-
-    .owl-carousel {
-        width: 90% !important;
-    }
-
-    .testimonial-quote {
-        padding-left: 10px;
-        padding-right: 10px;
-        font-size: 18px;
-        line-height: 30px;
-    }
-}
-
-/*---- Call to Action Section ------------*/
-
-.home-calltoaction {}
-
-.home-call-btom {
-    position: inherit;
-    margin-top: 0;
-    justify-content: center;
-    width: 100%;
-    padding: 25px 50px 25px 50px;
-    text-align: center;
-}
-
-.home-call-btom h3 {
-    width: 100%;
-}
-
 /*--------------------
 Clinicians Page
 ----------------------------- */
@@ -2403,7 +2218,9 @@ a.phone:hover {
 
 .clinician-subtitle {
     font-weight: 700;
+    margin-top: 50px;
     margin-bottom: 10px;
+    color: #F7931E;
 }
 
 .sidebar hr {
