--- a/themes/hbhtherapyintranet/style.css
+++ b/themes/hbhtherapyintranet/style.css
@@ -51,6 +51,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 # Pages
     - Home
     - News
+    - HR
 
 --------------------------------------------------------------*/
 
@@ -1556,280 +1557,7 @@ Home Page
     background-color: #FAF8F4;
 }
 
-.bg-home .butterfly-img-wrap {
-    margin-top: -35px;
-    width: 45%;
-}
 
-.bg-home {
-    display: none;
-}
-
-.home .bg-home {
-    display: flex;
-}
-
-.bg-home .section-content {
-    display: flex;
-    justify-content: flex-start;
-}
-
-.home-call-wrap {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 55%;
-    padding: 10px 100px 140px 60px;
-}
-
-.home-tagline {
-    color: #008587;
-    font-size: 50pt;
-    line-height: 1em;
-    margin-bottom: 0px;
-}
-
-.home-call-wrap h3 {
-    font-family: acumin-pro, sans-serif;
-    color: #4D4D4D;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 25pt;
-}
-
-@media only screen and (min-width: 700px) and (max-width: 1680px) {
-    .home-tagline {
-        font-size: 3.5vw;
-    }
-
-    .home-call-wrap h3 {
-        font-size: 2vw;
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .bg-home .section-content {
-        flex-wrap: wrap-reverse;
-    }
-
-    .hero-wrap {
-        margin-top: 60px;
-    }
-
-    .bg-home .butterfly-img-wrap {
-        width: 100%;
-    }
-
-    .butterfly-img-wrap img {
-        width: 100%;
-    }
-
-    .home-call-wrap {
-        position: absolute;
-        padding: 10px;
-        width: 100%;
-        z-index: 2;
-    }
-
-    .home-tagline {
-        font-size: 8vw;
-    }
-
-    .home-call-wrap h3 {
-        font-size: 4.5vw;
-    }
-}
-
-/*---- Service Section ------------*/
-.home-srv-section {
-    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 84%, rgba(250, 248, 244, 1) 100%);
-}
-
-.hm-srv-content {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.hmsrv-overlay-wrap {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    padding: 50px;
-}
-
-.hmsrv-overlay {
-    position: absolute;
-    background: linear-gradient(0deg, rgba(255, 255, 255, .95) 84%, rgba(250, 248, 244, 1) 100%);
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-}
-
-.overlay-contents {
-    padding: 25px 75px;
-    opacity: 0;
-}
-
-.hmsrv-accordian {
-    max-height: 0px;
-    overflow: hidden;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-width: 0px;
-    border-style: solid;
-    border-color: #334954;
-    border-radius: 6px;
-    margin: 0 5px 0 5px;
-}
-
-.hmsrv-overlay h2 {
-    display: inline-block;
-    color: #76559A;
-    font-size: 2em;
-}
-
-.hmsrv-overlay p {
-    display: inline-block;
-}
-
-.hmsrv-accordian p {
-    display: inline-block;
-}
-
-.hmsrv_link {
-    color: #76559A;
-    text-decoration: none;
-    margin-left: 5px;
-}
-
-.hmsrv_link:hover {
-    color: #F7931E;
-}
-
-.hmsrv-grid-wrap {
-    width: 50%;
-    justify-content: center;
-    align-items: center;
-}
-
-.hm-map {
-    width: 100%;
-}
-
-.hmsrv-grid-wrap h2 {
-    color: #F7931E;
-}
-
-.hmsrv-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(11rem, 1fr));
-    grid-auto-rows: 1fr;
-}
-
-.hmsrv-grid::before {
-    content: '';
-    width: 0;
-    padding-bottom: 100%;
-    grid-row: 1 / 1;
-    grid-column: 1 / 1;
-}
-
-.hmsrv-grid > *:first-child {
-    grid-row: 1 / 1;
-    grid-column: 1 / 1;
-}
-
-.hmsrv-grid-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-    padding: 10px 30px;
-    background-color: #FAF8F4;
-    box-shadow: -2px 2px 2px -2px #085962;
-    -webkit-box-shadow: -2px 2px 2px -2px #085962;
-    -moz-box-shadow: -2px 2px 2px -2px #085962;
-    border: 1px solid #334954;
-    border-radius: 6px;
-    font-size: 20px;
-    color: #085962;
-    text-align: center;
-    text-decoration: none;
-    transition: all 0.5s ease-in;
-}
-
-.hmsrv-grid-item:hover {
-    background-color: #76559A;
-    border: 1px solid #76559A;
-    box-shadow: -1px 2px 5px -2px #76559A;
-    -webkit-box-shadow: -1px 2px 5px -2px #76559A;
-    -moz-box-shadow: -1px 2px 5px -2px #76559A;
-    color: #fff;
-    cursor: pointer;
-    transition: all 0.5s ease-out;
-}
-
-.hmsrv-grid-item p {
-    font-size: 20px;
-    color: #085962;
-    text-align: center;
-    text-decoration: none;
-    margin: 0;
-    transition: all 0.5s ease-in;
-}
-
-.hmsrv-grid-item:hover p {
-    color: #fff;
-    transition: all 0.5s ease-out;
-}
-
-@media only screen and (max-width: 1125px) {
-    .hmsrv-wrap-desk {
-        display: none;
-    }
-
-    .hmsrv-overlay-wrap {
-        display: none;
-    }
-
-    .hmsrv-grid-wrap {
-        width: 100%;
-    }
-
-    .hmsrv-grid {
-        display: block;
-    }
-
-    .hmsrv-grid-item {
-        margin: 5px;
-    }
-}
-
-@media only screen and (min-width: 1125px) {
-    .hmsrv-wrap-mobile {
-        display: none;
-    }
-
-    .hmsrv-grid-item a {
-        color: #fff;
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .hmsrv-grid-item {
-        padding: 5px 30px;
-        font-size: 14px;
-    }
-
-    .hmsrv-grid-wrap h2 {
-        font-size: 1.5em;
-        text-align: left;
-        padding: 10px;
-    }
-}
 
 /*--------------------
 News
@@ -1908,6 +1636,56 @@ HR
 
 .accordion-content {
     display: none;
+}
+
+.hr-sidebar {
+    /*box-shadow: 6px 7px 8px -1px rgb(151 151 151 / 69%);
+    -webkit-box-shadow: 6px 7px 8px -1px rgb(151 151 151 / 69%);
+    -moz-box-shadow: 6px 7px 8px -1px rgba(151,151,151,0.69);
+    z-index: 100;*/
+ }    
+    
+.hdshot-wrap {
+    width: 100%;
+    background: #7BBEB6;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.hdshot-wrap:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+}
+
+a.author {
+    display: block;
+    font-weight: 600;
+    margin-top: 20px;
+    color: #085962;
+}
+
+a.author:hover {
+    color: #7BBEB6;
+}
+
+p.job-title {
+    margin: 10px 0px;
+}
+
+a.user-email {
+    color: #4D4D4D;
+    font-size: 16px;
+}
+
+a.user-email:hover {
+    color: #7BBEB6;
+}
+
+.hr-sidebar .btn {
+    width: 100%;
+    margin-bottom: 10px;
 }
 /*--------------------
 Clinicians Page
