logo link 2 commit

--- a/themes/hbhtherapyintranet/style.css
+++ b/themes/hbhtherapyintranet/style.css
@@ -1685,6 +1685,8 @@ a.user-email:hover {
 
 .hr-sidebar .btn {
     width: 100%;
+    height: 65px;
+    line-height: 1.5;
     margin-bottom: 10px;
 }
 /*--------------------
